# topcoffea

./: README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
analysis/topEFT/: make_cr_and_sr_plots.py  topeft.py  topeft_mvis1.py
docs/: configuration.md  quickstart.md  topeft_integration.md  tuple_schema.md
tests/: conftest.py  test_HistEFT_add.py  test_compat.py  test_corrected_jets_factory.py  test_corrected_jets_layout.py  test_corrected_met_factory.py  test_dynamic_data_reduction.py  test_environment_spec.py  test_executor_cli.py  test_histEFT.py  test_hist_utils.py  test_io_utils.py  test_jecstack_clib.py  test_namespace_imports.py  test_paths.py  test_remote_environment.py  test_runner_helper.py  test_runner_output.py  test_taskvine_cli.py  test_topeft_analysis_processor_executor.py  test_topeft_guard.py  test_unit.py  test_update_json.py  test_utils.py
tests/taskvine_assets/: minimal_input.json  minimal_processor.py  taskvine_cli.py
topcoffea/: __init__.py
topcoffea/cfg/: mc_background_samples_NDSkim.cfg
topcoffea/modules/: CorrectedJetsFactory.py  CorrectedMETFactory.py  HistEFT.py  JECStack.py  __init__.py  compat.py  corrections.py  createJSON.py  dynamic_data_reduction.py  env_cache.py  event_selection.py  executor.py  executor_cli.py  histEFT.py  hist_utils.py  io_utils.py  paths.py  remote_environment.py  root_utils.py  runner_output.py  update_json.py  utils.py
topcoffea/params/: xsec.yml
topcoffea/scripts/: __init__.py
